# npc-predictive-model

./: README.md
Datasets/: server_validation_dataset.parquet  test_dataset.parquet  validation_dataset.parquet
Federated Learning/my-app/: pyproject.toml
Federated Learning/my-app/my_app/: NPCnetwork.py  __init__.py  client_app.py  task.py
FederatedLearning/my-app/my_app/: server_app.py
Traditional/: FDATAReader.py  NPCdataset.py  NPCnetwork.py  PM100Reader.py  main.py
